# k8s_aws_secrets_sync

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
