[package]
name = "k8s_aws_secrets_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.10"
aws-sdk-secretsmanager = "1.53.0"
tokio = { version = "1.41.1", features = ["full"] }

clap = { version = "4.5.21", features = ["derive"] }
kube = { version = "0.97.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
serde_json = "1.0.133"
base64 = "0.22.1"
log = "0.4.22"
env_logger = "0.11.5"
